assets/css/style.css
body{
    background-color:rgb(102, 76, 76);
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    color: #777777;
    background-image: url("../images/dark_wood.png")

}

#bodystyle{
    background-image: url("../images/dark_wood.png")
}

h1{
    font-family:'Georgia', Times, Times New Roman, serif;
    color: #4aaaa5;
}

hr{
    margin: 15px;
    color: #777777;
}

a:hover {
    color: #4aaaa5;
}

header{
    width:100%;
    background-color:#ffffff;
    overflow: auto;
    clear: both;
    margin:auto;
    padding-top:10px;
}



.namenavbar{
    width:960px;
    overflow: auto;
    background-color: #ffffff;
    clear:both;
    margin:auto;
    padding:auto;
    font-weight: bold;
}

#name{
    float:left;
    background-color:#4aaaa5;
    color:#ffffff;
    padding: 0px 20px 0px 20px;

}

#nameheading{
    color:#ffffff
}

.navigators{
    float:right;
    color: #777777;
    padding-top: 30px;
    padding-left: 30px;
    text-decoration: none;
}


.bodycontainer{
    width: 960px;
    margin:auto;
}

.centercontainer{
    overflow:auto;
    padding: 40px 5px 40px 5px;
    clear:both;
    margin-bottom: 50px;
}

section{
    width:650px;
    float:left;
    background-color: #ffffff;
    margin: auto;
}

h3{
    font-style: italic;
}
.datainputs{
    margin:30px;
    padding: 20px;
    text-indent:0px;

}

#messagebox{
    width: 500px;
    height: 400px;
    padding:0px;
    margin:0px;
    resize:auto;
    float: none;
    top:0;
}



#submitbutton{
    background-color: #4aaaa5;
    padding:10px;

}

#submitbutton:hover{
    background-color: #666666;
}

#aboutme{
    text-indent: 30px;
}

p{
    padding:10px;
    clear:left;
    display: inline;
    clear: both;
}




aside{
    width:270px;
    float:right;
    background-color: #ffffff;
    margin:auto;
    text-align: center;
}

.portfolio{
    text-decoration: none;
    overflow: hidden;
    clear:both;
    text-align: 0;
    margin:auto;
    float: none;
    
}

.textadjust{
    background-color:#4aaaa5;
    color:#ffffff;
    text-decoration: none;
    text-align: center;
    margin-top: 190px;
    padding: 12px 0px;
    font-size: 20px;
    font-family:'Georgia', Times, Times New Roman, serif;
}    

.projectpics{
    margin:auto;
    background-size: 100%;
    width: 250px;
    height:250px;
    margin: 35px;
    float: left;
}

.portfolio-links{
    color:#ffffff;
    text-decoration:none;
}

.portfolio-links:hover{
    color:#666666;
}

#hangman{
    background-image: url("../images/img1.jpg");
}

#rpggame{
    background-image: url("../images/img2.jpg")
}

#triviagame{
    background-image: url("../images/img3.jpg")
}

#rutgers{
    background-image: url("../images/img4.jpg")
}

#rockpaper{
    background-image: url("../images/img5.jpg")
}


img{
    padding: 10px;
}

#imagestyle{
    width:200px;
    height:300px;
    float: left;
}

.connectlinks{
    color:none;
    display:hidden;
}

footer{
    width:100%;
    background-color:#666666;
    overflow: auto;
    clear: both;
    margin:auto;
    color: #ffffff;
    padding: 35px;
    border-top: #4aaaa5 10px solid;
    position:relative;
    left:0;
    bottom:0;
}

#footerstyle{
    width:960px;
    margin:auto;
    text-align: center;

}

